# TemplateRepo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
.github/hooks/: .pre-commit-config.yaml
.github/workflows/: docker-build.yml
docs/: architecture.md  design.md  rules.md  tests.md  workflows.md
docs/prompts/: improvement.md  review.md
infrastructure/: README.MD  docker-compose.yml
infrastructure/config/keycloak/: realm-export.json
migrations/: env.py
migrations/versions/: 0001_create_outbox.py  0001_create_outbox.sql
sandbox/: main.ipynb  migrate.ipynb  outbox.ipynb
src/: main.py
src/application/: app.py  dto.py  error.py
src/application/adapters/: core.py
src/application/handlers/: heartbeat.py
src/application/services/: outbox.py
src/application/usecases/: auth.py  heartbeat.py  jobs.py
src/domain/: entity.py  error.py  event.py  value.py
src/infrastructure/: config.py  error.py
src/infrastructure/auth/: keycloak.py
src/utils/: signing.py  time.py
tests/: conftest.py  test_amex_config.py  test_amex_scraper.py  test_api_auth.py  test_auth_usecases.py  test_bill_domain.py  test_bill_persistence.py  test_bill_routes.py  test_bill_usecases.py  test_billing_persistence.py  test_billing_refresh.py  test_billing_usecase.py  test_cli_setup.py  test_database.py  test_document_observability.py  test_heartbeat_handler.py  test_heartbeat_integration.py  test_heartbeat_routes.py  test_heartbeat_usecases.py  test_htmx_home.py  test_keycloak_auth.py  test_scrape_endpoint.py
(+36 files in other folders)
